# yew_rollup_template

./: .gitignore  Cargo.toml  LICENSE  README.md  main.js  package-lock.json  package.json  rollup.config.js
src/: lib.rs
static/: index.html  manifest.json
